# monoflow

./: .gitignore  .tool-versions  README.md  example.csv  pyproject.toml
monoflow/: config.example.py  main.py  utils.py
