[tool.poetry]
name = "monoflow"
version = "0.1.0"
description = ""
authors = ["Dmytro Soltysiuk <dimasoltusyuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"
python-dateutil = "^2.8.2"
aiofiles = "^22.1.0"
aiocsv = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
